--- a/Index/index.html
+++ b/Index/index.html
@@ -2,52 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
-    <title>World Clock - Busi Vilani</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"></script>
+
+    <title>World Clocks</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
-
+      <h1>World Clocks</h1>
       <select id="city">
-        <option value="">Select a city..</option>
+        <option value="">Select a city</option>
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
-        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Africa/Accra">Accra</option>
       </select>
 
       <div id="cities">
-        <div class="city" id="los-angeles">
+        <div class="city" id="philadelphia">
           <div>
-            <h2>Los Angeles</h2>
+            <h2>Philadelphia 🇺🇸</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
+        </div>
+        <div class="city" id="sydney">
+          <div>
+          <h2>Sydney 🇦🇺</h2>
+            <div class="date"></div>
+          </div>
+            <div class="time"></div>
         </div>
         <div class="city" id="paris">
           <div>
-            <h2>Paris</h2>
-            <div class="date"></div>
-          </div>
+        <h2>Paris 🇫🇷</h2>
+          <div class="date"></div>
+        </div>
           <div class="time"></div>
         </div>
-      </div>
     </div>
+
     <footer>
-      This project was coded with ❤️ by <strong>Dilyana Chausheva</strong> and
-      is
-      <a
-        href="https://github.com/DilyanaCh/world-clock-homework"
-        target="_blank"
-      >
-        open sourced on GitHub</a
-      >
+      <p>
+        Coded by <strong>Simone Canty </strong>and is open-sourced on
+        <a
+          href="https://github.com/Spartiegirl/World-Clock-Project"
+          target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://world-clocks-simone.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </p>
     </footer>
-    <script src="index.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
