--- a/Index/index.html
+++ b/Index/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"></script>
 
-    <title>World Clocks</title>
+    <title>World Clocks Final Project</title>
   </head>
   <body>
     <div class="container">
@@ -47,14 +47,14 @@
 
     <footer>
       <p>
-        Coded by <strong>Simone Canty </strong>and is open-sourced on
+        Coded by <strong>Busi Vilani</strong>and is open-sourced on
         <a
-          href="https://github.com/Spartiegirl/World-Clock-Project"
+          href="https://github.com/BVilani/World-Clock-Final"
           target="_blank"
           >Github</a
         >
         and hosted on
-        <a href="https://world-clocks-simone.netlify.app/" target="_blank"
+        <a href="https://app.netlify.com/projects/enchanting-taffy-15efb8/overview" target="_blank"
           >Netlify</a
         >
       </p>
